# OpenGLSandbox

./: CMakeLists.txt  README.md
src/: error.cpp  error.hpp  indexBuffer.cpp  indexBuffer.hpp  loader.cpp  loader.hpp  main.cpp  renderer.hpp  vertexBuffer.cpp  vertexBuffer.hpp
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
tmp/shaders/: Basic.shader.glsl
